# payment-test-tasks

./: .env.template  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start.sh
src/: main.py
src/api/: register_dependencies.py
src/api/cli/: __main__.py  users.py
src/api/controller/: auth.py  payment.py  register.py
src/api/exceptions/: handler.py  register.py
src/core/: database.py  security.py  settings.py
src/core/enums/: reason_type.py
src/infra/: __init__.py
src/infra/db/: __init__.py  users.py
src/infra/db/migrations/: env.py
src/infra/db/migrations/versions/: 1c1e4c3f4bea_create_users_table.py  d4d9bec7103d_add_user_balance_table.py  fead8d2655a0_add_transaction_table.py
src/infra/db/repositories/: balance.py  transactions.py  users.py
src/infra/db/tables/: balance.py  transactions.py  users.py
src/infra/redis/: _ip.py  common.py
src/infra/redis/models/: blocked_id.py
src/infra/repositories/: common.py  users.py
src/interfaces/: db.py
src/interfaces/repositories/: users.py
src/interfaces/repositories/alchemy/: balance.py  transactions.py  users.py
src/interfaces/repositories/redis/: _ip.py
src/services/: common.py  exceptions.py  users.py
src/services/auth/: service.py
src/services/payment/: exceptions.py  request_dto.py  response_dto.py  service.py
src/services/users/: users.py
