[tool.poetry]
name = "bakaitesttask"
version = "0.1.0"
description = "the system deducts funds from the user's balance"
authors = ["Beki Imanji <imanaliev@akhter.studio>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.109.2"
gunicorn = "^21.2.0"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
